# 666forum-scrape

./: .gitignore  README.md  pyproject.toml  run.py
src/: database.py  schema.py  scraper.py  utils.py
