[project]
name = "666forum-scrape"
version = "1.0.0"
description = "Scrape the 666forum website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "beautifulsoup4>=4.13.3",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]
license = { file = "LICENSE" }
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]

[tool.pyright]
enableTypeIgnoreComments = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "standard"
ignore = ["src/scraper.py"]